# Fractal

./: .gitmodules  CMakeLists.txt  README.md  gen_projects.py
src/example/: fractal_example.cmake  main.cpp
src/example/platform/macos/: macos_window.hpp  macos_window.mm
src/example/platform/windows/: windows_window.cpp  windows_window.hpp
src/example/shaders/: example.frag.glsl  example.vert.glsl
src/fractal/: fractal.hpp  fractal_base.cmake  fractal_example.cmake
src/fractal/backend/null/: fractal_backend_null.cmake
src/fractal/backend/null/instance/: null_instance.cpp  null_instance.hpp  null_instance_data.hpp
src/fractal/backend/null/surface/: null_window_surface.cpp  null_window_surface.hpp
src/fractal/backend/vulkan/: fractal_backend_vulkan.cmake
src/fractal/backend/vulkan/common/: vulkan_assert.hpp  vulkan_base.hpp  vulkan_forward_declarations.hpp
src/fractal/backend/vulkan/helpers/: vulkan_queue_family_indices.cpp  vulkan_queue_family_indices.hpp  (+2 more)
src/fractal/base/: fractal_base.cmake  shader_compile_helper.cmake
src/fractal/base/common/: assert.hpp  base.hpp  logger.cpp  logger.hpp  platform.hpp
src/fractal/base/helpers/: spv_file.cpp  spv_file.hpp
src/fractal/base/instance/: instance.hpp  instance_create_info.hpp
src/fractal/base/platform/: window_handle.hpp
src/fractal/base/render_pass/: render_pass_begin_op.hpp  render_pass_create_info.hpp  render_pass_end_op.hpp
src/fractal/base/shader/: shader_create_info.hpp
src/fractal/base/surface/: window_handle.hpp  window_surface.hpp  window_surface_create_info.hpp
(+28 files in other folders)
